[tool.poetry]
name = "Moebot"
version = "1.0.0"
description = "A Reddit to Discord/Twitter bot"
authors = ["glitchy <thepatheticweebgamer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.10.0"
asyncpraw = "^7.5.0"
python-dotenv = "^0.20.0"
discord-webhook = "^0.16.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
